# PolkaMusic-Buildathon

./: .gitignore  README.md
chain/pallets/nft/: Cargo.toml
chain/pallets/nft/src/: lib.rs
chain/pallets/pm-nft/: Cargo.toml
chain/pallets/pm-nft/src/: lib.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
ui/polkamusic_player/: README.md  config-overrides.js  package-lock.json  package.json
ui/polkamusic_player/public/: index.html
ui/polkamusic_player/src/: App.js  index.js
ui/polkamusic_player/src/chainApis/: burnEasyNftsAtNode.js  callBurnEasyNfts.js  callMintFromSource.js  callMultiBurnNfts.js  callTransferFromSource.js  connectToChain.js  customTypes.js  easyTokensMap.js  getAddressBalance.js  getTokens.js  getTokensByOwner.js  mediumTokensMap.js
ui/polkamusic_player/src/components/: Main.js
ui/polkamusic_player/src/components/images/: nftPuzzle.css  nftPuzzle.js
ui/polkamusic_player/src/components/main/: MusicPlayer.js  Wallet.js  tracks.js
ui/polkamusic_player/src/components/main/discover/: Browse.js  (+3 more)
ui/polkamusic_player/src/components/sidebar/: SideBar.js
ui/polkamusic_player/src/redux/: Actions.js  Redux.js  accountReducer.js
ui/polkamusic_player_api/: db.js  db.sql  index.js  package-lock.json  package.json
ui/polkamusic_player_api/controllers/: playlist.js  reports.js  user.js
ui/polkamusic_player_api/controllers/favourites/: favourites.js  favourites_playlist.js
ui/polkamusic_player_api/routes/: playlist.js  reports.js  user.js
ui/polkamusic_player_api/routes/favourites/: favourites.js  favourites_playlist.js
